--- a/index.html
+++ b/index.html
@@ -125,6 +125,60 @@
                 </div>
             </div>
         </section>
+<hr><hr><hr><hr>
+
+        <section id="projects" class="one d-flex justify-content-around">
+            <div class="card mt-5" style="width: 22rem;">
+                <img src="./imageJS/projectJS1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Project 1</h5>
+                    <p class="card-text">project 1 in js.</p>
+                    <a href="./presentaion/presentaionJ1.html" target="_blank" class="btn btn-warning">Project 1</a>
+                </div>
+            </div>
+            <div class="card mt-5" style="width: 22rem;">
+                <img src="./imageJS/projectJS2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Project 2</h5>
+                    <p class="card-text">project 2 in js.</p>
+                    <a href="./presentaion/presentaionJS2.html" class="btn btn-warning">Project 2</a>
+                </div>
+            </div>
+            <div class="card mt-5" style="width: 22rem;">
+                <img src="./imageJS/projectJS3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Project 3</h5>
+                    <p class="card-text">project 3 in js.</p>
+                    <a href="./presentaion/presentaionJS3.html" target="_blank" class="btn btn-warning">Project 3</a>
+                </div>
+            </div>
+        </section>
+        <section class=" one d-flex justify-content-around">
+            <div class="card mt-5" style="width: 22rem;">
+                <img src="./imageJS/projectJS4.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Project 4</h5>
+                    <p class="card-text">project 4 in js.</p>
+                    <a href="./presentaion/presentaionJS4.html" target="_blank" class="btn btn-warning">Project 4</a>
+                </div>
+            </div>
+            <div class="card mt-5" style="width: 22rem;">
+                <img src="./imageJS/projectJS5.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Project 5</h5>
+                    <p class="card-text">project 5 in js.</p>
+                    <a href="./presentaion/presentaionJS5.html" target="_blank" class="btn btn-warning">Project 5</a>
+                </div>
+            </div>
+            <div class="card mt-5" style="width: 22rem;">
+                <img src="./imageJS/projectJS6.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Project 6</h5>
+                    <p class="card-text">project 6 in js.</p>
+                    <a href="./presentaion/presentaionJS6.html" target="_blank" class="btn btn-warning">Project 6</a>
+                </div>
+            </div>
+        </section>
 
 
         <div id="box">
